--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main">
+      <h1>Random Password Generator</h1>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
